PB-43022 UI bug: On the share dialog, the default avatar is too small

--- a/src/less/components/permission/permissions.less
+++ b/src/less/components/permission/permissions.less
@@ -102,11 +102,6 @@
             /* aro summary */
             .avatar {
                 float: left;
-
-                svg {
-                  width: 4.2rem;
-                  height: 4.2rem;
-                }
             }
             .aro {
                 flex: 1 1 auto;
@@ -155,12 +150,12 @@
 
         /* shimmering skeleton when loading */
         .row.skeleton {
-            height:42px;
+            height: 5.6rem;
             position:relative;
             .avatar {
                 float: left;
-                width: 4.2rem;
-                height: 4.2rem;
+                width: 5.6rem;
+                height: 5.6rem;
                 background: var(--Dialog-Dialog-background);
                 border-radius:50%;
                 flex:none
